--- a/renderer/style.css
+++ b/renderer/style.css
@@ -379,24 +379,24 @@ svg.hand-drawn-button {
 }
 
 #video-player-container {
-  position: fixed;
+  position: absolute;
   inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-sizing: border-box;
-  z-index: 1000;
+  box-sizing: content-box;
+  z-index: 100;
   background: transparent;
   pointer-events: none;
 }
 
 #video-player {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   background: transparent;
   z-index: 1000;
   pointer-events: auto;
-  object-fit: cover;
+  object-fit: none;
 }
 
 #video-controls {
